# fullstack-mlops

./: .env.example  .gitignore  MIGRATION_COMPLETED.txt  Makefile  Makefile.refactored  PROJECT_STRUCTURE.md  README.md  debug_ensemble.py  docker-compose.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-prod.txt
.github/workflows/: ml-cicd.yml  python-lint.yml
configs/: app.yaml  mypy.ini  requirements.txt
configs/environments/: development.yaml  production.yaml  staging.yaml
deployment/docker/: docker-compose.yaml
deployment/metabase/: Dockerfile  README.md  setup.sh
deployment/metabase/config/: metabase.properties
deployment/metabase/data/: metabase.db.mv.db  metabase.db.trace.db
deployment/metabase/data/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
docs/: CI_CD_GUIDE.md  FB.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  duckdb.md  todo.md
scripts/: migrate_code.py  migrate_config.py
src/: train_pipeline.py
src/api/: Dockerfile  README.md
src/api/app/: __init__.py  main.py
src/api/app/models/: __init__.py  schemas.py
src/api/app/services/: __init__.py  inference.py
src/api/app/utils/: __init__.py  helpers.py
src/configs/: ensemble_config.yaml  model_config.yaml  training.yaml
src/core/: config.py  exceptions.py  logging.py
src/data/dwh/dwh/: __init__.py
src/data/dwh/dwh/core/: __init__.py  database.py  ingestion.py
src/data/dwh/dwh/data/: __init__.py
src/data/dwh/dwh/house_price_dbt/: dbt_project.yml  train.py
src/data/dwh/dwh/house_price_dbt/models/gold/: ft_house_ml.py  ft_house_ml.yml
src/data/dwh/dwh/house_price_dbt/models/silver/: silver_house_data.sql  silver_house_data.yml
src/data/dwh/dwh/scripts/: setup_dwh.py
src/ml/: README.md  __init__.py
src/ml/data/: __init__.py  run_processing.py
src/ml/data/dwh/: README.md  __init__.py  database.py  explore_dwh.py  ingestion.py  schema.py  setup_dwh.py
src/ml/data/dwh/config/: __init__.py  settings.py
src/ml/data/dwh/core/: __init__.py  ingestion.py  schema.py
src/ml/data/dwh/data/: __init__.py  house_price_dwh.duckdb
src/ml/data/dwh/house_price_dbt/: train.py
src/ml/data/dwh/house_price_dbt/models/: sources.yml
src/ml/data/dwh/house_price_dbt/models/bronze/: bronze_raw_house_data.sql
src/ml/data/dwh/house_price_dbt/models/gold/: ft_house_ml.py
src/ml/data/dwh/house_price_dbt/models/silver/: silver_house_data.sql
src/ml/data/dwh/scripts/: __init__.py  explore_dwh.py  setup_dwh.py
src/ml/features/: __init__.py  engineer.py
src/ml/models/: __init__.py  train_ensemble.py  train_model.py
src/ml/pipeline/: __init__.py  train_pipeline.py
src/models/base/: __init__.py
src/models/inference/: train_pipeline.py
src/models/training/: train_ensemble.py  train_model.py
src/services/api/: Dockerfile  README.md  __init__.py
src/services/api/services/: __init__.py
src/services/api/utils/: __init__.py
src/services/ui/: app.py
src/tests/: test_ml_pipeline.py  test_model_pipeline.py
src/ui/: app.py
tests/: test_model.py  test_model_pipeline.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_dwh_integration.py
tests/unit/: test_core_config.py  test_core_exceptions.py  test_core_logging.py
